[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/2.PNG" type="Texture" id=1]
[ext_resource path="res://assets/4.PNG" type="Texture" id=2]
[ext_resource path="res://PlayerMovement.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 26.0192

[sub_resource type="GDScript" id=4]
script/source = "extends Area2D

"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 16.5 )

[node name="Node2D" type="Node2D"]

[node name="2" type="Sprite" parent="."]
position = Vector2( 1004, 21 )
texture = ExtResource( 1 )

[node name="PlayerBody" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="PlayerBody"]
position = Vector2( 483, 257 )
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
position = Vector2( 483, 258 )
shape = SubResource( 1 )

[node name="RightTeleporter" type="Area2D" parent="."]
position = Vector2( 576, 257 )
script = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightTeleporter"]
position = Vector2( 27, 3.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="RightTeleporter"]
position = Vector2( 28, 3 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="RightTeleporter" to="PlayerBody" method="_on_RightTeleporter_body_entered"]
