[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/1.PNG" type="Texture" id=1]
[ext_resource path="res://assets/2.PNG" type="Texture" id=2]
[ext_resource path="res://assets/sprite_6.png" type="Texture" id=3]
[ext_resource path="res://PlayerMovement.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 18.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 16.5 )

[node name="Node2D" type="Node2D"]

[node name="PlayerBody" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="PlayerBody"]
position = Vector2( 483, 257 )
scale = Vector2( 0.9375, 0.9375 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody"]
position = Vector2( 483, 255.5 )
shape = SubResource( 3 )

[node name="2Teleporter" type="Area2D" parent="."]
position = Vector2( 343, 256 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="2Teleporter"]
position = Vector2( 27, 3.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="2Teleporter"]
position = Vector2( 28, 3 )
texture = ExtResource( 2 )

[node name="1" type="Sprite" parent="."]
position = Vector2( 1011, 19 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="2Teleporter" to="PlayerBody" method="_on_2Teleporter_body_entered"]
[connection signal="body_entered" from="2Teleporter" to="PlayerBody" method="_on_LeftTeleporter_body_entered"]
